optimize other types (Byte, Double, Float and Short)